objects/blng__AgingBuckets__c.object
<CustomObject>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BucketNumber__c</fullName>
        <label>Bucket Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__EndingDaysfromPastDue__c</fullName>
        <label>Ending Days from Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__StartingDaysfromPastDue__c</fullName>
        <label>Starting Days from Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aging Buckets</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Aging Buckets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aging Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>